--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: swift
-osx_image: xcode6.4 
+osx_image: xcode10.0 
 xcode_project: demo.xcworkspace
 xcode_scheme: demo
-xcode_destination: platform=iOS Simulator,OS=10.1,name=iPad Pro (9.7-inch)
+xcode_destination: platform=iOS Simulator,OS=11.3,name=iPhone X
